# libdomain

./: .gitignore  CMakeLists.txt  Doxyfile  Lib.cpp  README.md
include/: domain.hpp  hpfloat.hpp  number.hpp  value.hpp
include/bgrt/: bgrt.hpp
include/domain/: base.hpp  mpi.hpp  multithread.hpp  util.hpp
include/impl/: partition.hpp
plotting/: plot-abs.py  plot-correct.py  plot-rel.py  plot-ulp.py
run_scripts/: runme.sh  runme_double.sh
tests/: balanced-125-pt.cpp  balanced-5-pt.cpp  bgrt-balanced-125-pt-mpi.cpp  bgrt-balanced-125-pt.cpp  bgrt-balanced-13-pt.cpp  bgrt-balanced-25-pt.cpp  bgrt-balanced-27-pt.cpp  bgrt-balanced-5-pt.cpp  bgrt-balanced-7-pt.cpp  bgrt-balanced-9-pt.cpp  bgrt-balanced-poisson.cpp  bgrt-ltr-125-pt.cpp  bgrt-ltr-13-pt.cpp  bgrt-ltr-25-pt.cpp  bgrt-ltr-27-pt.cpp  bgrt-ltr-5-pt.cpp  bgrt-ltr-7-pt.cpp  bgrt-ltr-9-pt.cpp  bgrt-ltr-poisson.cpp  ltr-125-pt.cpp  ltr-5-pt.cpp  simple.cpp  val_test.cpp
tests/double/: bgrt-balanced-125-pt-mpi.cpp  bgrt-balanced-125-pt.cpp  bgrt-balanced-13-pt.cpp  bgrt-balanced-25-pt.cpp  bgrt-balanced-27-pt.cpp  bgrt-balanced-5-pt.cpp  bgrt-balanced-7-pt.cpp  bgrt-balanced-9-pt.cpp  bgrt-balanced-poisson.cpp  bgrt-ltr-125-pt.cpp  bgrt-ltr-13-pt.cpp  bgrt-ltr-25-pt.cpp  bgrt-ltr-27-pt.cpp  bgrt-ltr-5-pt.cpp  bgrt-ltr-7-pt.cpp  bgrt-ltr-9-pt.cpp  bgrt-ltr-poisson.cpp
